welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.FlowerPot'
override def run() {
             ^